// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlantCard > рисует карточку и карточку с поправкой на отопление 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
    style="min-width: 0px; width: 100%;"
  >
    <div
      class="ant-card-body"
    >
      <div
        class="ant-space ant-space-vertical ant-space-align-start ant-space-gap-row-middle ant-space-gap-col-middle"
        style="min-width: 0px; width: 100%;"
      >
        <div
          class="ant-space-item"
          style="align-self: stretch; min-width: 0px; width: 100%;"
        >
          <div
            class="plant-card__photo"
          >
            <div
              class="ant-image"
              title="Нажмите для просмотра"
            >
              <img
                alt="Монстера"
                class="ant-image-img"
                src="/thumb.jpg"
                style="cursor: pointer; object-fit: cover; border-radius: 8px;"
              />
              <div
                class="ant-image-mask"
              >
                <div
                  class="ant-image-mask-info"
                >
                  <span
                    aria-label="eye"
                    class="anticon anticon-eye"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="eye"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                      />
                    </svg>
                  </span>
                  Предпросмотр
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="align-self: stretch; min-width: 0px; width: 100%;"
        >
          <h5
            class="ant-typography"
            style="margin: 0px;"
          >
            Монстера
          </h5>
        </div>
        <div
          class="ant-space-item"
          style="align-self: stretch; min-width: 0px; width: 100%;"
        >
          <div
            style="align-items: center; column-gap: 8px; display: grid; grid-template-columns: max-content 1fr; row-gap: 4px; width: 100%;"
          >
            <span
              class="ant-typography ant-typography-secondary"
            >
              Полив
            </span>
            <div
              style="min-width: 0px; width: 100%;"
            >
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="71"
                class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-small"
                role="progressbar"
                style="width: 100%;"
              >
                <div
                  class="ant-progress-outer"
                  style="width: 100%;"
                >
                  <div
                    class="ant-progress-inner"
                  >
                    <div
                      class="ant-progress-bg ant-progress-bg-outer"
                      style="width: 71%; height: 6px; --progress-line-stroke-color: #bae637; background: rgb(186, 230, 55); --progress-percent: 0.71;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <span
              class="ant-typography ant-typography-secondary"
              style="font-size: 12px; grid-column: 1 / -1;"
            >
              через 5 дней
            </span>
            <span
              class="ant-typography ant-typography-secondary"
            >
              Подкормка
            </span>
            <div
              style="min-width: 0px; width: 100%;"
            >
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="30"
                class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-small"
                role="progressbar"
                style="width: 100%;"
              >
                <div
                  class="ant-progress-outer"
                  style="width: 100%;"
                >
                  <div
                    class="ant-progress-inner"
                  >
                    <div
                      class="ant-progress-bg ant-progress-bg-outer"
                      style="width: 30%; height: 6px; --progress-line-stroke-color: #fa8c16; background: rgb(250, 140, 22); --progress-percent: 0.3;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="align-self: stretch; min-width: 0px; width: 100%;"
        >
          <div
            class="ant-flex ant-flex-wrap-wrap"
            style="min-width: 0px; width: 100%; gap: 8px;"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
              style="height: auto; max-width: 100%; min-height: 32px; min-width: 0px; white-space: normal;"
              type="button"
            >
              <span>
                Полил сегодня
              </span>
            </button>
            <button
              class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
              style="height: auto; max-width: 100%; min-height: 32px; min-width: 0px; white-space: normal;"
              type="button"
            >
              <span>
                Подкормил сегодня
              </span>
            </button>
            <button
              class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
              type="button"
            >
              <span>
                Состояние
              </span>
            </button>
            <a
              data-discover="true"
              href="/plants/plant-1/edit"
              style="max-width: 100%; min-width: 0px;"
            >
              <button
                class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                style="height: auto; max-width: 100%; min-height: 32px; min-width: 0px; white-space: normal;"
                type="button"
              >
                <span>
                  Редактировать
                </span>
              </button>
            </a>
            <button
              aria-describedby="id"
              class="ant-btn ant-btn-default ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-outlined"
              type="button"
            >
              <span>
                Удалить
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlantCard > рисует карточку и карточку с поправкой на отопление 2`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
    style="min-width: 0px; width: 100%;"
  >
    <div
      class="ant-card-body"
    >
      <div
        class="ant-space ant-space-vertical ant-space-align-start ant-space-gap-row-middle ant-space-gap-col-middle"
        style="min-width: 0px; width: 100%;"
      >
        <div
          class="ant-space-item"
          style="align-self: stretch; min-width: 0px; width: 100%;"
        >
          <div
            class="plant-card__photo"
          >
            <div
              class="ant-image"
              title="Нажмите для просмотра"
            >
              <img
                alt="Монстера"
                class="ant-image-img"
                src="/thumb.jpg"
                style="cursor: pointer; object-fit: cover; border-radius: 8px;"
              />
              <div
                class="ant-image-mask"
              >
                <div
                  class="ant-image-mask-info"
                >
                  <span
                    aria-label="eye"
                    class="anticon anticon-eye"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="eye"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                      />
                    </svg>
                  </span>
                  Предпросмотр
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="align-self: stretch; min-width: 0px; width: 100%;"
        >
          <h5
            class="ant-typography"
            style="margin: 0px;"
          >
            Монстера
          </h5>
        </div>
        <div
          class="ant-space-item"
          style="align-self: stretch; min-width: 0px; width: 100%;"
        >
          <div
            style="align-items: center; column-gap: 8px; display: grid; grid-template-columns: max-content 1fr; row-gap: 4px; width: 100%;"
          >
            <span
              class="ant-typography ant-typography-secondary"
            >
              Полив
            </span>
            <div
              style="min-width: 0px; width: 100%;"
            >
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="60"
                class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-small"
                role="progressbar"
                style="width: 100%;"
              >
                <div
                  class="ant-progress-outer"
                  style="width: 100%;"
                >
                  <div
                    class="ant-progress-inner"
                  >
                    <div
                      class="ant-progress-bg ant-progress-bg-outer"
                      style="width: 60%; height: 6px; --progress-line-stroke-color: #bae637; background: rgb(186, 230, 55); --progress-percent: 0.6;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <span
              class="ant-typography ant-typography-secondary"
              style="font-size: 12px; grid-column: 1 / -1;"
            >
              через 3 дней · отопление, воздух суше обычного
            </span>
            <span
              class="ant-typography ant-typography-secondary"
            >
              Подкормка
            </span>
            <div
              style="min-width: 0px; width: 100%;"
            >
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="30"
                class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-small"
                role="progressbar"
                style="width: 100%;"
              >
                <div
                  class="ant-progress-outer"
                  style="width: 100%;"
                >
                  <div
                    class="ant-progress-inner"
                  >
                    <div
                      class="ant-progress-bg ant-progress-bg-outer"
                      style="width: 30%; height: 6px; --progress-line-stroke-color: #fa8c16; background: rgb(250, 140, 22); --progress-percent: 0.3;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="align-self: stretch; min-width: 0px; width: 100%;"
        >
          <div
            class="ant-flex ant-flex-wrap-wrap"
            style="min-width: 0px; width: 100%; gap: 8px;"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
              style="height: auto; max-width: 100%; min-height: 32px; min-width: 0px; white-space: normal;"
              type="button"
            >
              <span>
                Полил сегодня
              </span>
            </button>
            <button
              class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
              style="height: auto; max-width: 100%; min-height: 32px; min-width: 0px; white-space: normal;"
              type="button"
            >
              <span>
                Подкормил сегодня
              </span>
            </button>
            <button
              class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
              type="button"
            >
              <span>
                Состояние
              </span>
            </button>
            <a
              data-discover="true"
              href="/plants/plant-1/edit"
              style="max-width: 100%; min-width: 0px;"
            >
              <button
                class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                style="height: auto; max-width: 100%; min-height: 32px; min-width: 0px; white-space: normal;"
                type="button"
              >
                <span>
                  Редактировать
                </span>
              </button>
            </a>
            <button
              aria-describedby="id"
              class="ant-btn ant-btn-default ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-outlined"
              type="button"
            >
              <span>
                Удалить
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
